# compdoc

./: .compdoc.yml  .gitignore  README.md  README.md.j2  compdoc_cli.py  pyproject.toml
compdoc/: compiler.py  exceptions.py  format.py  model.py  parser.py
compdoc-formatters/: inline_ul.md.j2  ul.md.j2
compdoc_cli/: __init__.py  compdoc_cli.py  formatters.py
compdoc_cli/default_formatters/: href.md.j2  ul.md.j2
tests/: test_compiler.py  test_formatter.py  test_parser.py
tests/vectortest/: .compdoc.yml  README.md  README.md.j2  __init__.py  vec.py
tests/vectortest/formatters/: david.md.j2  ul.md.j2
